# project-sentinel

./: .gitignore  README.md  deploy.sh  pyproject.toml
.cursor/rules/: AI-Review-Cycle.mdc  Implementation-Standards.mdc  Role-and-Decision-Boundaries.mdc  Sentinel-Constitution.mdc  Verify-Understanding.mdc
Docs/: Backlog.md  Daily.md  Roadmap.md
Docs/Architecture/: 00_System_Architecture.md  ARCHIVE.md  Architecture.md  ArchitecturePrinciples.md  CustomerReport.md  EngineeringValues.md  ImagingSafety.md  Oracle.md  PdfReportExport.md  REPORTING.md  REPORT_SCHEMA.md  RecoveryCase.md  RecoveryOperation.md  RecoveryOperationRecord.md  RecoveryOperationReporting.md  RecoveryOperationStandard.md  ReportLocalization.md  SentinelLaws.md  TestDiskIntegration.md
Docs/Archive/: DRS-1_Roadmap_Historical.md
Docs/Engineering/: Dependencies.md  DevelopmentWorkflow.md  EngineeringManual.md  EngineeringNotebook.md  Experience.md  Mission Log.md  Planning_Post_HERMES_Phase2.md
Docs/Vision/: Ideas.md  Vision.md
Tests/: test_acquisition_state.py  test_acquisition_workflow.py  test_aegis.py  test_archive.py  test_argus.py  test_completed_at.py  test_echo.py  test_echo_failsafe.py  test_hermes.py  test_i18n.py  test_identity_validation.py  test_imaging_decision_matrix.py  test_pdf_report_export.py  test_recovery_acquisition_gate.py  test_recovery_operations.py  test_recovery_outcome.py  test_report_localization.py  test_resume_assessment.py  test_session_registry.py  test_testdisk_config.py  test_testdisk_execution.py  test_testdisk_prep.py  test_testdisk_wiring.py
(+33 files in other folders)
